app/main.css
/* main css stylesheet */

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  overflow: hidden;
  background-color: #3d81ee;
  font-family: 'Open Sans', sans-serif;
}

#main {
  display: flex;
  flex-direction: column-reverse;
  width: 100%;
  height: 100%;
}

h1,
h2 {
  line-height: .75em;
}

h2 {
  font-style: italic;
  font-size: 1.25em;
}

#bio {
  display: flex;
  padding: 2% 0;
  flex-direction: column;
  background-color: rgba(0, 0, 0, .2);
}

#bioText {
  color: #fff;
  flex-grow: 1;
  text-align: center;
  margin: 0;
}

#icons {
  display: flex;
  align-items: center;
  flex-direction: column;
  flex-grow: 1;
  justify-content: flex-start;
}

#icons a {
  margin: .33em;
}

.linkIcons {
  color: #fff;
  font-size: 3em;
  padding: .25em .35em;
}

#avatar {
  display: flex;
  flex: 1;
  align-items: flex-end;
  border: 0;
}

img {
  max-width: 100%;
  max-height: 100vh;
}

